cv bootstrap final

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header {
   background : url("https://www.avastmobileenterprise.com/hubfs/Remotuin-2016/Image/Form-Bg.png?t=1480609795260img");
   background-attachment: fixed;
   background-repeat: no-repeat;
-  }
+}
 
 [class*="col-"], footer {
   border: 6px;
@@ -20,7 +20,7 @@ i
 }
 #contenuCompetences div
 {
-  text-align: left;
+  text-align: center;
 }
 .couleur{
   background-color: #6AF6AF;
