--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ h3{
 .picto{
   color : black;
 }
+.btn-lg{
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  margin-right: 10px;
+  padding-top: 10px;
+  background-color: inherit;
+  float: right;
+  }
