--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,14 @@ header, body{
   color: black;
 }
 .navbar{
-  position: relative;
+  position:relative;
   min-height: 50px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
 .logoreseau, h2{
   color:#2CE1D6;
+  margin: 10px;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
